@@ -126,8 +126,15 @@ class grocery_CRUD_Field_Types
 			{
 				$field_name = isset($field_object->field_name) ? $field_object->field_name : $field_object;
 				
-				if(!isset($types[$field_name]))
+				if(!isset($types[$field_name]))//Doesn't exist in the database? Create it for the CRUD
 				{
+					$extras = false;
+					if($this->change_field_type !== null && isset($this->change_field_type[$field_name]))
+					{
+						$field_type = $this->change_field_type[$field_name];
+						$extras 	=  $field_type->extras;
+					}					
+					
 					$field_info = (object)array(
 						'name' => $field_name, 
 						'crud_type' => $this->change_field_type !== null && isset($this->change_field_type[$field_name]) ?
@@ -136,7 +143,8 @@ class grocery_CRUD_Field_Types
 						'display_as' => isset($this->display_as[$field_name]) ? 
 												$this->display_as[$field_name] : 
 												ucfirst(str_replace("_"," ",$field_name)),
-						'required'	=> in_array($field_name,$this->required_fields) ? true : false
+						'required'	=> in_array($field_name,$this->required_fields) ? true : false,
+						'extras'	=> $extras
 					);
 					
 					$types[$field_name] = $field_info;
@@ -148,8 +156,15 @@ class grocery_CRUD_Field_Types
 			{
 				$field_name = isset($field_object->field_name) ? $field_object->field_name : $field_object;
 				
-				if(!isset($types[$field_name]))
+				if(!isset($types[$field_name]))//Doesn't exist in the database? Create it for the CRUD
 				{
+					$extras = false;
+					if($this->change_field_type !== null && isset($this->change_field_type[$field_name]))
+					{
+						$field_type = $this->change_field_type[$field_name];
+						$extras 	=  $field_type->extras;
+					}
+					
 					$field_info = (object)array(
 						'name' => $field_name, 
 						'crud_type' => $this->change_field_type !== null && isset($this->change_field_type[$field_name]) ?
@@ -158,7 +173,8 @@ class grocery_CRUD_Field_Types
 						'display_as' => isset($this->display_as[$field_name]) ? 
 												$this->display_as[$field_name] : 
 												ucfirst(str_replace("_"," ",$field_name)),
-						'required'	=> in_array($field_name,$this->required_fields) ? true : false
+						'required'	=> in_array($field_name,$this->required_fields) ? true : false,
+						'extras'	=> $extras
 					);
 					
 					$types[$field_name] = $field_info;
